# stampify

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  image_to_stamp.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/ink_print/: __init__.py  cli.py  core.py
src/ink_print/webapp/: app.py
src/ink_print/webapp/templates/: index.html
tests/: test_cli.py  test_core.py  test_webapp.py
