[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ink-print"
version = "0.1.0"
description = "Turn black-and-white artwork into stamp-ready STL models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "manifold3d>=3,<4",
  "numpy>=2,<3",
  "pillow>=10,<12",
  "scikit-image>=0.24,<1",
  "shapely>=2,<3",
  "triangle>=20250106",
  "trimesh>=4,<5",
]

[project.scripts]
ink-stamp = "ink_print.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ink_print"]
